CI: PYTHONPATH 명시로 src 모듈 인식 문제 해결 및 워크플로우 수정

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -23,7 +23,7 @@ jobs:
           pip install pytest pytest-cov requests
       - name: Run tests with coverage and save log
         run: |
-          pytest -v --cov=./ --cov-report=xml --cov-report=term | tee result.log
+          PYTHONPATH=. pytest -v --cov=./ --cov-report=xml --cov-report=term | tee result.log
       - name: Send result to Discord
         if: always()
         run: |
